syntax = "proto3";

package resources.discord;

import "resources/timestamp/timestamp.proto";

option go_package = "github.com/fivenet-app/fivenet/v2025/gen/go/proto/resources/discord;discord";

message Channel {
  string id = 1;
  string guild_id = 2;
  string name = 3;
  uint32 type = 4;
  int64 position = 5;
}

message Guild {
  string id = 1;
  string name = 2;
  string icon = 3;
  optional resources.timestamp.Timestamp created_at = 4;
}
